		* Most of the others are intended for specific particle effects and haven't really been tested! 
		* You can see this feature in action by running "map test_particle_effect" in the editor. It's also in some maps
* Added the ability to independently disable the keyboard and mouse using the cls.disable_keyboard and cls.disable_mouse properties (overridden by cls.disable_input)
* Added the MOD_ZOMBIE and MOD_ZOMBIFIED Methods of Death (MOD) strings
* Added the EF_LIGHTNING entity effect
* New core engine types:
	* vec3_t typedef'd as color3_t (RGB format)
	* vec4_t typedef'd as color4_t (RGBA format)
* Particle system features:
	* Added permanent particles that never despawn (optional)
	* Added a "lifetime" field to cparticle_t that allows particles to despawn without fading away with alphavel
* cl_showinfo improvements:
	* Text turns yellow if you are more than 5 FPS below the target fps (60 fps or cl_maxfps, whichever is lower), scaling down linearly with the value of cl_maxfps
	* Text turns red if you drop below (target_fps)/2
	* Added the current map you are playing
* On debug builds (NOT IN PLAYTEST OR RELEASE BUILDS THAT YOU ACTUALLY DOWNLOAD), sv_cheats is now always enabled
* Game API version 8: 
	* Added WriteColor
	* Renamed WritePosition to WritePos for consistency with engine

BUG FIXES:
* Various map fixes
	* Fixed a misaligned light switch on z_tdm_subway
	* Fixed one of the roofs of the bases on z_tdm_subway being 8 units off
	* Added a clip brush to some of the stairs on z_tdm_labrats
* Fixed the networking of generic, flame, smoke, flash, flashlight and steam particle effects
* Fixed server crash that could happen in rare cases if the Bamfuslicator failed to spawn a zombie (it was trying to free the zombie edict before creaitng it)
* Fixed potential memory corruption and exploit issue involving calling CL_ClearParticles with no particles. You would be able to set the four bytes at [80..76] bytes (cl_particles->next) before the 