@@ -291,17 +291,20 @@
 		8 : "Rocket Explosion (Land)"
 		9 : "Grenade Explosion (Land)"
 		10 : "Rocket Explosion (Water)"
-		11 : "Generic Sparks"
-		12 : "Screen Sparks"
+		11 : "Grenade Explosion (Water)"
+		12 : "Generic Sparks"
 		13 : "Shield Sparks"
 		14 : "Bullet Sparks"
-		15 : "Teleport Effect"
-		16 : "Lightning"
-		17 : "Flames"
-		18 : "Smoke"
-		19 : "Steam"
-		20 : "Flashlight"
-		21 : "Light"	
+		15 : "Laser Sparks"
+		16 : "Splash"
+		17 : "Bubble Trail"
+		18 : "Teleport Effect"
+		19 : "Lightning"
+		20 : "Flames"
+		21 : "Smoke"
+		22 : "Steam"
+		23 : "Flashlight"
+		24 : "Light"	
 	]
 
 	particle_rate(integer) : "Rate of particles per second" : 50
